octsympy 0.1.1 (yyyy-mm-dd)
===========================

 *  New commands:

          isscalar
          uplus

 *  IPC system() should work on windows (FIXME: test header load)

 *  Improvements to string handling/escaping especially newlines.

     -  Enter a multiline command using a cell array of lines e.g.,
        `python_cmd({'a = 10' 'return (a, 2*a)'})
     -  The same applies to `evalpy`.  If you need the old deprecated
        behaviour, it is still available as `python_cmd_string`.

 *  Bug fixes, #88, #90.



octsympy 0.1.0 (2014-08-27)  Pacific Coffee
===========================================

Major Changes
-------------

 *  `sympref` replaces `octsympy_config`.  You can change the Python
    interpreter with `sympref python /path/to/python`.

 *  Unicode pretty-printed output by default.

     -  If you see `?` or other broken characters, try `sympref display
        ascii`.  Then help me get this working on your system!

     -  Or `sympref display flat` to disable pretty-printing.  (You can
        still use the `pretty` command selectively).

 *  Experimental Windows package with Python and SymPy included (look
    Ma, no deps!)  Uses [David Manthey's single file py.exe Python] [1].

   [1]: http://www.orbitals.com/programs/pyexe.html

 *  Lots of new commands:

          atan2           fliplr         isfinite          norm
          ccode           flipud         isna              not
          cond            fortran        jacobian          qr
          conj            ge             laplacian         real
          curl            gradient       le                repmat
          det             gt             lt                svd
          divergence      hessian        lu                toeplitz
          ezplot3         imag           matlabFunction    tril
          ezplot          inv            ne                triu

 *  Preliminary code generation (`ccode`, `fortran` and